{
    "name": "Test",
    "maps": [
        {
            "name": "RightHand",
            "id": "a0749c95-17c5-4e54-b53d-a813c15e67c1",
            "actions": [
                {
                    "name": "PrimaryButton",
                    "type": "Button",
                    "id": "b8f47cec-06ac-4c5a-8511-7a841fd10ea3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryButton",
                    "type": "Button",
                    "id": "5e5feb85-5555-4229-a58e-d65194e9df2b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TriggerButton",
                    "type": "Button",
                    "id": "87077cf5-9985-4143-97c4-020d9b105913",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Primary2DAxis",
                    "type": "Value",
                    "id": "b57cd05e-4aea-4fd7-864d-f876118e4ac2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "03bf08a9-0f8d-4cb6-ac2c-533cf69d1e1b",
                    "path": "<XRController>{RightHand}/{PrimaryButton}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "901f0e35-a41c-474e-989f-76402bc3d389",
                    "path": "<XRController>{RightHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f046752a-c134-49fc-947e-a22eb0fc714a",
                    "path": "<XRController>{RightHand}/triggerButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TriggerButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2cf0852d-fd4a-4afe-b55c-3f7bd33a6fe5",
                    "path": "<XRController>{RightHand}/{Primary2DAxis}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Primary2DAxis",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}